Navlist hidden on mobile to prevent accidental tap

--- a/src/components/nav/Nav.module.css
+++ b/src/components/nav/Nav.module.css
@@ -262,6 +262,10 @@
   user-select: none;
 }
 
+.noInteract {
+  display: none !important;
+}
+
 @media (max-width: 1200px) {
   .osrshelpLogo {
     margin-left: 0rem;
